# fd

./: .gitignore  CMakeLists.txt  README.md  TANE.cpp  TANE.h  Table.cpp  Table.h  fd.sln  main.cpp  util.h
Release/: CMakeCache.txt  Makefile  cmake_install.cmake  fd
Release/dfd/: Makefile  cmake_install.cmake
Release/table/: Makefile  cmake_install.cmake
Release/tane/: Makefile  cmake_install.cmake
dfd/: CMakeLists.txt  cmake_install.cmake  dfd.cpp  dfd.h  dfd.vcxproj  dfd.vcxproj.filters
dfd/Debug/: dfd.lib
dfd/dfd.dir/Debug/dfd.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  dfd.lastbuildstate
table/: AttrIndexes.cpp  AttrIndexes.h  CMakeLists.txt  ColumnCombination.cpp  ColumnCombination.h  FunctionalDependency.cpp  FunctionalDependency.h  Partition.cpp  Partition.h  PartitionM.cpp  PartitionM.h  Table.cpp  Table.h  cmake_install.cmake  partition.h  table.vcxproj  table.vcxproj.filters
table/Debug/: table.lib
table/table.dir/Debug/table.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
tane/: CMakeLists.txt  TANE.cpp  TANE.h
